form control, reactive input

--- a/src/app/admin/components/basic-form/basic-form.component.html
+++ b/src/app/admin/components/basic-form/basic-form.component.html
@@ -1,3 +1,11 @@
 <p>basic-form works!ssss</p>
 <input type="text" [formControl]="nameField">
 {{nameField.value}}
+<!-- <code>
+    <pre>
+        {{nameField | json}}
+    </pre>
+</code>
+
+ -->
+ <button (click)="getNameValue()" >consolog</button>
