--- a/src/app/admin/components/basic-form/basic-form.component.html
+++ b/src/app/admin/components/basic-form/basic-form.component.html
@@ -38,3 +38,19 @@
     Number: {{numberField.value}}
     <input type="" [formControl]="numberField">
 </p>
+<p>
+    Category: {{categoryField.value}}
+     <select [formControl]="categoryField">
+        <option value="category-1" >category 1</option>
+        <option value="category-2">category 2</option>
+        <option value="category-3">category 3</option>
+    </select> 
+</p>
+<p>
+    Tagas: {{tagField.value}}
+     <select [formControl]="tagField" multiple>
+        <option value="tag-1" >tag 1</option>
+        <option value="tag-2">tag 2</option>
+        <option value="tag-3">tag 3</option>
+    </select> 
+</p>
