--- a/src/app/admin/components/basic-form/basic-form.component.html
+++ b/src/app/admin/components/basic-form/basic-form.component.html
@@ -1,15 +1,18 @@
 
 <p>basic-form works!ssss
 <input type="text" [formControl]="nameField">
-{{nameField.value}}
+{{nameField.value}} {{nameField.valid}} {{nameField.touched}}
 <!-- <code>
-    <pre>
-        {{nameField | json}}
-    </pre>
-</code>
+    <pre>{{nameField | json}}</pre>
+</code>-->
+ <button (click)="getNameValue()" [disabled]="nameField.invalid" >consolog</button>
+</p>
 
- -->
- <button (click)="getNameValue()" >consolog</button>
+<p>
+    <strong *ngIf="nameField.touched && nameField.hasError('required')" >Este campo es requerido</strong>
+</p>
+<p>
+    <strong *ngIf="nameField.touched && nameField.hasError('maxlength')" >maximo dos caracteres</strong>
 </p>
 
 
@@ -93,4 +96,11 @@
         <input name="zone"type="radio" value="zone 3" [formControl]="zoneField">    
         Zone 3
     </label>
+</p>
+
+<p>
+    Preferences: {{preferencesField.value}}
+    <input type="checkbox" value="music" [formControl]="preferencesField"> Listen music
+    <input type="checkbox" value="game" [formControl]="preferencesField"> Game
+    <input type="checkbox" value="guitar" [formControl]="preferencesField"> Play guitar
 </p>
