--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -25,6 +25,10 @@
         <button [disabled]="form.invalid" mat-raised-button type="submit">Ingresar</button>
       </mat-card-actions>
     </mat-card>
+    <p>
+      User: nicolas@nicolas.com
+      Pass: nicolas.2010
+    </p>
 
   </form>
 
