--- a/src/app/admin/components/basic-form/basic-form.component.html
+++ b/src/app/admin/components/basic-form/basic-form.component.html
@@ -6,12 +6,13 @@
 
 
 
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="save($event)">
+    <p> name: {{ form}} {{nameField.valid}}</p>
     <input 
-        [class.is-valid]="name.touched && nameField.valid"
+        [class.is-valid]="nameField.touched && nameField.valid"
         [class.is-invalid]="nameField.touched && nameField.invalid"
         type="text"
-        [formControlName]="name">
+        formControlName="name"/>
     <!-- {{nameField.valid}} {{nameField.touched}} -->
     <!-- <code>
         <pre>{{nameField | json}}</pre>
@@ -22,6 +23,90 @@
     </ng-template>
 
     <button (click)="getNameValue()" [disabled]="nameField.invalid" >consolog</button>
+
+    <p>
+        Email: {{emailField.value}}
+        <input type="email"   formControlName="email">
+    </p>
+    <p>
+        tel: {{phoneField.value}}
+        <input type="tel" formControlName="Phone">
+    </p>
+    <p>
+        Phone: {{colorField.value}}
+        <input type="color" formControlName="color">
+    </p>
+    <p>
+        Date: {{dateField.value}}
+        <input type="date" formControlName="date">
+    </p>
+    <p>
+        Number: {{numberField.value}}
+        <input type="number" formControlName="number">
+    </p>
+    <p>
+        Number: {{numberField.value}}
+        <input type="" formControlName="email">
+    </p>
+    <p>
+        Category: {{categoryField.value}}
+         <select formControlName="category">
+            <option value="category-1" >category 1</option>
+            <option value="category-2">category 2</option>
+            <option value="category-3">category 3</option>
+        </select> 
+    </p>
+    <p>
+        Tags: {{tagField.value}}
+         <select formControlName="tag" multiple>
+            <option value="tag-1" >tag 1</option>
+            <option value="tag-2">tag 2</option>
+            <option value="tag-3">tag 3</option>
+        </select> 
+    </p>
+
+
+
+    <p>
+        Gender: {{genderField.value}}
+        <!-- <mat-radio-button value="value">Option</mat-radio-button> -->
+        <label for="">
+            <input  name="gender" type="radio" value="m"formControlName="gender">    
+            Male
+        </label>
+        <label for="">
+        <input name="gender" type="radio" value="f" formControlName="gender">    
+        Female  
+        </label>
+    
+        <label for="">
+        <input name="gender"type="radio" value="o" formControlName="gender">    
+        Other  
+        </label>
+    </p>
+    
+    <p>
+        zone: {{zoneField.value}}
+        <!-- <mat-radio-button value="value">Option</mat-radio-button> -->
+        <label for="">
+            <input name="zone" type="radio" value="zone 1" formControlName="zone">    
+            Zone 1
+        </label>
+        <label for="">
+            <input name="zone" type="radio" value="zone 2" formControlName="zone">    
+            Zone 2 
+        </label>
+        <label for="">
+            <input name="zone"type="radio" value="zone 3" formControlName="zone">    
+            Zone 3
+        </label>
+    </p>
+    <p>
+        <button type="submit">asdasda
+
+        </button>
+    </p>
+
 </form>
 
 
@@ -95,10 +180,10 @@
     </select> 
 </p>
 
-<p>
+<!-- <p>
     Number: {{agreefield.value}}
     <input type="checkbox" [formControl]="agreefield">    
-</p>
+</p> -->
 
 <p>
     Gender: {{genderField.value}}
