--- a/src/app/admin/components/basic-form/basic-form.component.html
+++ b/src/app/admin/components/basic-form/basic-form.component.html
@@ -7,27 +7,78 @@
 
 
 <form [formGroup]="form" (ngSubmit)="save($event)">
-
     <div formGroupName="fullName">
-        <p> name: {{nameField.valid}}</p>
+    <mat-form-field appearance="fill">
+        <mat-label> name: {{nameField.value}}</mat-label>
         <input 
-            [class.is-valid]="nameField.touched && nameField.valid"
-            [class.is-invalid]="nameField.touched && nameField.invalid"
+            matInput  
             type="text"
-            formControlName="name"/>
-        <!-- {{nameField.valid}} {{nameField.touched}} -->
-        <!-- <code>
-            <pre>{{nameField | json}}</pre>
-        </code>-->
-        <img *ngIf="nameField.valid===true else other_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Yes_Check_Circle.svg/20px-Yes_Check_Circle.svg.png" alt=""> 
-        <ng-template #other_image>
-            <img width="18px" src="https://cdn.pixabay.com/photo/2012/04/12/20/12/x-30465_960_720.png" alt=""> 
-        </ng-template>
+            formControlName="name">
+            <mat-icon matSuffix *ngIf="nameField.valid===true  ">done</mat-icon>
+            <mat-icon matSuffix *ngIf="nameField.valid===false  ">close</mat-icon>
+      </mat-form-field><br>
+
     
+      <div class="example-button-row">
+        <button mat-button>Basic</button>
+        <button mat-button color="primary">Primary</button>
+        <button mat-button color="accent">Accent</button>
+        <button mat-button color="warn">Warn</button>
+        <button mat-button disabled>Disabled</button>
+        <a mat-button routerLink=".">Link</a>
+      </div><br>
+
+      <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+        <mat-button-toggle value="bold">Bold</mat-button-toggle>
+        <mat-button-toggle value="italic">Italic</mat-button-toggle>
+        <mat-button-toggle value="underline">Underline</mat-button-toggle>
+      </mat-button-toggle-group>
+<br>
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Shiba Inu</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>This card has divider and indeterminate progress as footer</p>
+          <p>{{ nameField.value }}</p>
+          <mat-divider></mat-divider>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+        <mat-card-footer>
+          <!-- <mat-progress-bar mode="indeterminate"></mat-progress-bar> -->
+        </mat-card-footer>
+      </mat-card>
+
+    <br>
+    <section class="example-section" [formGroup]="form">
+        <h4>Select your toppings:</h4>
+        <p><mat-checkbox [formControl]="preferencesField">Pepperoni</mat-checkbox></p>
+        <p><mat-checkbox formControlName="extracheese">Extra Cheese</mat-checkbox></p>
+        <p><mat-checkbox formControlName="mushroom">Mushroom</mat-checkbox></p>
+      </section>
+      
+      <section class="example-section" [formGroup]="form">
+        <h4>You chose:</h4>
+        <!-- {{toppings.value | json}} -->
+      </section>
+
+
+      <br>
+     
         <button (click)="getNameValue()" [disabled]="nameField.invalid" >consolog</button>
     
         <div class="message" [class.active]="nameField.touched && nameField.invalid">
-            <p>
+            <mat-error *ngIf="nameField.hasError('required')"> 
+                Este campo es requerido
+            </mat-error>
+            <mat-error *ngIf=" nameField.hasError('pattern')"> 
+                Caracteres invalidos
+            </mat-error>
+            <!-- <p>
                 <strong *ngIf="nameField.hasError('required')">
                     Este campo es requerido
                 </strong>
@@ -36,7 +87,7 @@
                 <strong *ngIf=" nameField.hasError('pattern')">
                     Caracteres invalidos
                 </strong>
-            </p>
+            </p> -->
         </div>
 
         <input 
