--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -29,7 +29,13 @@
         <div class="col-xs">
           <mat-form-field>
             <mat-label>Confirm Password</mat-label>
-            <input placeholder="password" formControlName="password" matInput type="password">
+            <input placeholder="password" formControlName="confirmPssword" matInput type="password">
+           
+            <!-- <div *ngIf="form.get('confirmPssword').touched && form.errors">
+              <mat-error *ngIf="form.hasError('match_password')" > 
+                No son iguales
+              </mat-error>
+            </div> -->
           </mat-form-field>
         </div>
       </div>
