get category tamplate

--- a/src/app/admin/categories/components/categories/categories.component.html
+++ b/src/app/admin/categories/components/categories/categories.component.html
@@ -1,5 +1,39 @@
-<p>categories works!</p>
-<a routerLink="create">Crear categoria</a>
-<div>
+
+<div class="title-category">
+    <div class="title">
+        <h1>Categorias</h1>
+    </div>
     
+    <div class="button-title">
+        <button routerLink="create" class="button-title--button">Crear categoria</button>
+        <!-- <a routerLink="create">Crear categoria</a>     -->
+    </div>
 </div>
+
+<div class="table-category">
+   <mat-card class="card-category">
+    <mat-card-header>
+      <mat-card-title>Category name</mat-card-title>
+      <span class="material-icons">
+        visibility
+        </span>
+    </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" 
+    alt="Photo of a Shiba Inu"
+    class="category-img">
+   
+  </mat-card>
+  <mat-card class="card-category">
+    <mat-card-header>
+      <mat-card-title>Category name</mat-card-title>
+      <span class="material-icons">
+        visibility
+        </span>
+    </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" 
+    alt="Photo of a Shiba Inu"
+    class="category-img">
+   
+  </mat-card>
+</div>
+
